force-app/main/default/objects/Opportunity/fields/Created_Date_Copy__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Copy__c</fullName>
    <label>Created Date Copy</label>
    <type>DateTime</type>
</CustomField>