force-app/main/default/objects/Opportunity/fields/REVvue_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>REVvue_CreatedDate__c</fullName>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>