force-app/main/default/objects/Opportunity/fields/REVvue_CurrencyType__c.field-meta.xml
<CustomField>
    <fullName>REVvue_CurrencyType__c</fullName>
    <inlineHelpText>Put currency ISO code to calculate the converted amount(USD,GBP...).</inlineHelpText>
    <label>Currencey Type</label>
    <length>5</length>
    <type>Text</type>
</CustomField>