force-app/main/default/objects/Opportunity/fields/REVvue_ExecMassCalc__c.field-meta.xml
<CustomField>
    <fullName>REVvue_ExecMassCalc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Execute Mass Calculation</label>
    <type>Checkbox</type>
</CustomField>