force-app/main/default/objects/Opportunity/fields/REVvue_InitialOpp__c.field-meta.xml
<CustomField>
    <fullName>REVvue_InitialOpp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initial Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Initial Opportunity)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>