force-app/main/default/objects/Opportunity/fields/REVvue_ParentOpp__c.field-meta.xml
<CustomField>
    <fullName>REVvue_ParentOpp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Parent Opportunity)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>