force-app/main/default/objects/Opportunity/fields/REVvue_RevRecRule__c.field-meta.xml
<CustomField>
    <fullName>REVvue_RevRecRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RevRecRule</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RevRecRules__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RevRecRules__c</referenceTo>
    <relationshipLabel>Opportunities (RevRecRule)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>