force-app/main/default/objects/Opportunity/fields/REVvue_RuleAssignment__c.field-meta.xml
<CustomField>
    <fullName>REVvue_RuleAssignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rule Assignment</label>
    <referenceTo>Rule_Assignment__c</referenceTo>
    <relationshipLabel>Opportunities (Rule Assignment)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>