force-app/main/default/objects/Opportunity/fields/REVvue_RuleAssignType__c.field-meta.xml
<CustomField>
    <fullName>REVvue_RuleAssignType__c</fullName>
    <label>Rule Assignment Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>