force-app/main/default/objects/Opportunity/fields/REVvue_Total_Opp_wei__c.field-meta.xml
<CustomField>
    <fullName>REVvue_Total_Opp_wei__c</fullName>
    <label>Total Opportunity weighted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>