force-app/main/default/objects/Opportunity/fields/REVvue_TotalDeferred__c.field-meta.xml
<CustomField>
    <fullName>REVvue_TotalDeferred__c</fullName>
    <label>Total Deferred</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>