force-app/main/default/objects/Opportunity/fields/REVvue_TotalDeferredwei__c.field-meta.xml
<CustomField>
    <fullName>REVvue_TotalDeferredwei__c</fullName>
    <label>Total Deferred weighted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>