force-app/main/default/objects/Opportunity/fields/REVvue_TotalForecasted__c.field-meta.xml
<CustomField>
    <fullName>REVvue_TotalForecasted__c</fullName>
    <label>Total Forecasted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>