force-app/main/default/objects/Opportunity/fields/REVvue_TotalForecastedwei__c.field-meta.xml
<CustomField>
    <fullName>REVvue_TotalForecastedwei__c</fullName>
    <label>Total Forecasted weighted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>