force-app/main/default/objects/Opportunity/fields/REVvue_TotalOpportunity__c.field-meta.xml
<CustomField>
    <fullName>REVvue_TotalOpportunity__c</fullName>
    <label>Total Opportunity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>