force-app/main/default/objects/Opportunity/fields/REVvue_TotalRecognized__c.field-meta.xml
<CustomField>
    <fullName>REVvue_TotalRecognized__c</fullName>
    <label>Total Recognized</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>