force-app/main/default/objects/Opportunity/fields/REVvue_TotalRecognizedwei__c.field-meta.xml
<CustomField>
    <fullName>REVvue_TotalRecognizedwei__c</fullName>
    <label>Total Recognized weighted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>