force-app/main/default/objects/Opportunity/fields/REVvue_TotalResidual__c.field-meta.xml
<CustomField>
    <fullName>REVvue_TotalResidual__c</fullName>
    <label>Total Residual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>