force-app/main/default/objects/Opportunity/fields/REVvue_TotalResidualwei__c.field-meta.xml
<CustomField>
    <fullName>REVvue_TotalResidualwei__c</fullName>
    <label>Total Residual weighted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>