force-app/main/default/objects/Opportunity/fields/Start_Revenue_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Revenue_Date__c</fullName>
    <label>Start Revenue Date</label>
    <type>Date</type>
</CustomField>