force-app/main/default/objects/Opportunity/fields/TCV_Actual__c.field-meta.xml
<CustomField>
    <fullName>TCV_Actual__c</fullName>
    <label>TCV Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>